# EmScripten

./: .gitignore  .travis.yml  BUILD.md  CMakeLists.txt  README.md  main.cpp
src/: myLib.cpp  myLib.h
